src/test/testData/src/main/resources/META-INF/doma/example/dao/inspection/TestDataCheckDao/populateDirective.sql
UPDATE employee
   SET /*%populate*/id = id
 WHERE rank < <error descr="Bind variables must be followed by test data">/* emplotee.rank */</error>
